[gd_scene load_steps=4 format=3 uid="uid://dsold2fus7k0j"]

[ext_resource type="Script" path="res://scripts/bottle.gd" id="1_yjgtf"]
[ext_resource type="Texture2D" uid="uid://7ag3ia4ts68w" path="res://textures/bottle.webp" id="2_0hrxo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kjtyj"]
size = Vector2(36, 18.3206)

[node name="Bottle" type="CharacterBody2D"]
collision_mask = 0
input_pickable = true
script = ExtResource("1_yjgtf")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
scale = Vector2(3, 3)
texture = ExtResource("2_0hrxo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6.21676e-05)
scale = Vector2(1, 5.24)
shape = SubResource("RectangleShape2D_kjtyj")

[node name="LifeTimer" type="Timer" parent="."]

[connection signal="mouse_shape_entered" from="." to="." method="_on_mouse_shape_entered"]
[connection signal="mouse_shape_exited" from="." to="." method="_on_mouse_shape_exited"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
